relative and absolute path test

--- a/index.html
+++ b/index.html
@@ -190,7 +190,10 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img
+                      src="https://github.com/rubenverkuylen/dreams-xxl/blob/15fa47a30e254b2a471bffda28672a703985c1b2/img/thumbnail-temp.png"
+                      alt="thumbnail soon"
+                    />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">
@@ -221,7 +224,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:09:55</div>
@@ -250,7 +253,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Ireland; duration: 0:24:29</div>
@@ -278,7 +281,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">USA; duration: 0:07:05</div>
@@ -298,7 +301,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:01:07</div>
@@ -315,7 +318,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands, duration: 0:02:50</div>
@@ -336,7 +339,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:16:57</div>
@@ -362,7 +365,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Spain; duration: 0:15:24</div>
@@ -438,7 +441,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">
@@ -472,7 +475,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:07:57</div>
@@ -503,7 +506,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Ireland; duration: 0:06:52</div>
@@ -526,7 +529,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:13:00</div>
@@ -555,7 +558,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:19:28</div>
@@ -584,7 +587,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:21:38</div>
@@ -605,7 +608,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Belgium; duration: 0:30:00</div>
@@ -634,7 +637,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">
@@ -700,7 +703,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:03:31</div>
@@ -726,7 +729,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Germany; duration: 0:25:26</div>
@@ -753,7 +756,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:04:26</div>
@@ -782,7 +785,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Germany; duration: 0:09:00</div>
@@ -811,7 +814,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:07:26</div>
@@ -838,7 +841,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:14:00</div>
@@ -863,7 +866,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Italy; duration: 00:01:15</div>
