--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <span id="haeder-title"><strong>Dreams XXL</strong></span>
-      <span id="header-date">4 – 21 May 2023</span>
+      <span id="header-date">&emsp;4 – 21 May 2023</span>
     </header>
     <nav class="main-nav">
       <div class="modals">
@@ -55,7 +55,7 @@
           </div>
           <div class="artists">
             <p>
-              <span>Artists involved:</span>
+              <span>Artists involved:</span>&emsp;
               <a href="https://www.instagram.com/anna.alla/" target="_blank"
                 >Anna Tamm</a
               >
@@ -190,7 +190,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">
@@ -221,7 +221,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:09:55</div>
@@ -250,7 +250,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Ireland; duration: 0:24:29</div>
@@ -278,7 +278,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">USA; duration: 0:07:05</div>
@@ -298,7 +298,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:01:07</div>
@@ -315,7 +315,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands, duration: 0:02:50</div>
@@ -336,7 +336,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:16:57</div>
@@ -362,7 +362,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Spain; duration: 0:15:24</div>
@@ -438,7 +438,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">
@@ -472,7 +472,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:07:57</div>
@@ -503,7 +503,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Ireland; duration: 0:06:52</div>
@@ -526,7 +526,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:13:00</div>
@@ -555,7 +555,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:19:28</div>
@@ -584,7 +584,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:21:38</div>
@@ -605,7 +605,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Belgium; duration: 0:30:00</div>
@@ -634,7 +634,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">
@@ -700,7 +700,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:03:31</div>
@@ -726,7 +726,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Germany; duration: 0:25:26</div>
@@ -753,7 +753,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:04:26</div>
@@ -782,7 +782,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Germany; duration: 0:09:00</div>
@@ -811,7 +811,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:07:26</div>
@@ -838,7 +838,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:14:00</div>
@@ -863,7 +863,7 @@
                 </div>
                 <div class="work-content">
                   <figure>
-                    <img src="/img/thumbnail-temp.png" alt="thumbnail soon" />
+                    <img src="img/thumbnail-temp.png" alt="thumbnail soon" />
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">Italy; duration: 00:01:15</div>
