desktop: date fixed to bottom

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css?v=0.1" />
+    <link rel="stylesheet" href="style.css?v=0.2" />
     <title>Dreams XXL: 4 – 21 May 2023</title>
   </head>
   <body>
@@ -36,17 +36,17 @@
             </p>
             <p>
               <a href="https://www.instagram.com/laak.club/" target="_blank"
-                >laak.club</a
+                >Laak</a
               >
-              presents its first exhibition, curated with
+              presents its first exhibition, curated by
+              <a href="https://www.instagram.com/wysiwygcinema/" target="_blank"
+                >wysiwyg</a
+              >
+              &
               <a
                 href="https://www.instagram.com/homecinemaaaaaaaa/"
                 target="_blank"
                 >Home Cinema</a
-              >
-              &
-              <a href="https://www.instagram.com/wysiwygcinema/" target="_blank"
-                >wysiwyg</a
               >. The first iteration of Laak’s shows will present a narrative of
               selected time-based works, screened in XXL format in the grand
               warehouse of Laak, where each weekend will constitute a different
