--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Dreams XXL: 4-21 May 2023, an exhibition with time-based works screened in XXL format at Laak by wysiwyg and Home Cinema."
+    />
+    <meta
+      name="keywords"
+      content="film, art, exhibition, warehouse, dream, installation"
+    />
+    <meta name="author" content="wysiwyg and Home Cinema" />
+    <link type="text/plain" rel="author" href="http://laak.club/humans.txt" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css?v=0.2" />
+    <meta name="format-detection" content="telephone=no" />
+    <link rel="stylesheet" href="style.css?v=0.3" />
     <title>Dreams XXL: 4 – 21 May 2023</title>
   </head>
   <body>
@@ -48,9 +59,8 @@
                 target="_blank"
                 >Home Cinema</a
               >. The first iteration of Laak’s shows will present a narrative of
-              selected time-based works, screened in XXL format in the grand
-              warehouse of Laak, where each weekend will constitute a different
-              programme and experience.
+              selected time-based works, in the grand warehouse of Laak, where
+              each weekend will constitute a different programme and experience.
             </p>
           </div>
           <div class="artists">
