--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Dreams XXL: 4-21 May 2023, an exhibition with time-based works screened in XXL format at Laak by wysiwyg and Home Cinema."
+      content="XXL Dreams: 4-21 May 2023, an exhibition with time-based works screened in XXL format at Laak by wysiwyg and Home Cinema."
     />
     <meta
       name="keywords"
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header>
-      <span id="haeder-title"><strong>Dreams XXL</strong></span>
+      <span id="haeder-title"><strong>XXL Dreams</strong></span>
       <span id="header-date">&emsp;4 – 21 May 2023</span>
     </header>
     <nav class="main-nav">
