Open Graph update

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="format-detection" content="telephone=no" />
+    <meta property="og:title" content="XXL Dreams" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.laak.club/xxl-dreams" />
+    <meta
+      property="og:image"
+      content="https://github.com/rubenverkuylen/xxl-dreams/blob/main/img/xxl-dreams-thubnail.png"
+    />
+    <meta
+      property="og:description"
+      content="4-21 May 2023, an exhibition with time-based works screened in XXL format at Laak by wysiwyg and Home Cinema."
+    />
+
     <link rel="stylesheet" href="style.css?v=0.3" />
     <title>Dreams XXL: 4 – 21 May 2023</title>
   </head>
