--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <meta property="og:url" content="https://www.laak.club/xxl-dreams" />
     <meta
       property="og:image"
-      content="https://github.com/rubenverkuylen/xxl-dreams/blob/main/img/xxl-dreams-thubnail.png"
+      content="https://www.laak.club/xxl-dreams/img/xxl-dreams-thubnail.png"
     />
     <meta
       property="og:description"
       content="4-21 May 2023, an exhibition with time-based works screened in XXL format at Laak by wysiwyg and Home Cinema."
     />
 
-    <link rel="stylesheet" href="style.css?v=0.3" />
+    <link rel="stylesheet" href="style.css?v=1.0" />
     <title>Dreams XXL: 4 – 21 May 2023</title>
   </head>
   <body>
