HTML dates and paths images

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="XXL Dreams: 4-21 May 2023, an exhibition with time-based works screened in XXL format at Laak by wysiwyg and Home Cinema."
+      content="XXL Dreams: 5-21 May 2023, an exhibition with time-based works screened in XXL format at Laak by wysiwyg and Home Cinema."
     />
     <meta
       name="keywords"
       content="film, art, exhibition, warehouse, dream, installation"
     />
     <meta name="author" content="wysiwyg and Home Cinema" />
-    <link type="text/plain" rel="author" href="http://laak.club/humans.txt" />
-    <link rel="icon" href="/img/favicon.ico" />
+    <link
+      type="text/plain"
+      rel="author"
+      href="https://laak.club/xxl-dreams/human.text"
+    />
+    <link rel="icon" href="https://laak.club/xxl-dreams/img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="format-detection" content="telephone=no" />
@@ -21,20 +25,20 @@
     <meta property="og:url" content="https://www.laak.club/xxl-dreams" />
     <meta
       property="og:image"
-      content="https://www.laak.club/xxl-dreams/img/xxl-dreams-thubnail.png"
+      content="https://www.laak.club/xxl-dreams/img/xxl-dreams-thumbnail.png"
     />
     <meta
       property="og:description"
-      content="4-21 May 2023, an exhibition with time-based works screened in XXL format at Laak by wysiwyg and Home Cinema."
+      content="5-21 May 2023, an exhibition with time-based works screened in XXL format at Laak by wysiwyg and Home Cinema."
     />
 
-    <link rel="stylesheet" href="style.css?v=1.0" />
-    <title>Dreams XXL: 4 – 21 May 2023</title>
+    <link rel="stylesheet" href="style.css?v=1.1" />
+    <title>Dreams XXL: 5 – 21 May 2023</title>
   </head>
   <body>
     <header>
       <span id="header-title"><strong>XXL Dreams</strong></span>
-      <span id="header-date">&emsp;4 – 21 May 2023</span>
+      <span id="header-date">&emsp;5 – 21 May 2023</span>
     </header>
     <nav class="main-nav">
       <div class="modals">
@@ -60,7 +64,7 @@
                 target="_blank"
                 >Home Cinema</a
               >, featuring a narrative of twenty-three carefully selected
-              time-based works from May 4th to May 21st, 2023. The exhibition
+              time-based works from May 5th to May 21st, 2023. The exhibition
               explores the concept of dreams, as cinematic manifestations.
               Dreams create mysterious juxtapositions of subjects, objects, and
               places, they generate multiple selves, and offer landscapes of
@@ -154,7 +158,7 @@
           </div>
         </main>
         <footer>
-          <time class="date"><strong>4 — 21 May 2023</strong></time>
+          <time class="date"><strong>5 — 21 May 2023</strong></time>
           <time class="hour"> Fri — Sun, 20.00–22.00</time>
           <address>
             <a href="https://goo.gl/maps/oHv7GgMDbgn5yCqT7" target="_blank"
@@ -197,8 +201,8 @@ c36.56,0.01,72.92-4.03,109.48-3.82c28.62,0.17,57.2,2.97,84.66,8.29c13.97,2.71,27
           </div>
           <div class="week-info">
             <div class="week-date">
-              <time>4 – 7 May 2023: 20.00–22.00</time>
-              <time>4 may 2023 (opening): 20.00–22.00</time>
+              <time>5 – 7 May 2023: 20.00–22.00</time>
+              <time>5 may 2023 (opening): 20.00–22.00</time>
             </div>
           </div>
           <div class="work-list">
