Feline text update

--- a/index.html
+++ b/index.html
@@ -633,15 +633,17 @@ c36.56,0.01,72.92-4.03,109.48-3.82c28.62,0.17,57.2,2.97,84.66,8.29c13.97,2.71,27
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:07:57</div>
                     <div class="work-text">
-                      The video is an investigation into the archeology of
-                      obsolete special effects. It is set in an artificial world
-                      inspired by science fiction low budget movies, cult TV
-                      series, and Hollywood classics from the 70s and 80s. The
-                      consolidated visual metaphor of the cave is used in order
-                      to make the viewer transition between two realities. Once
-                      on the other side, we meet a fictional character, an old
-                      talking rock that lives in a cavern. The rock is musing on
-                      all the films seen and that have shaped its own memories.
+                      ‘Silence lay steadily against the wood and stone’ is an
+                      uncanny composition of familiar settings; transporting you
+                      from dusty attics to ornate wedding venues and beyond. By
+                      animating vacant spaces, Hjermind turns backgrounds into
+                      main characters. The video questions how architectural
+                      structures can have personalities and how interiors might
+                      demand a certain behaviour. It brings to mind both
+                      surveillance footage and landscape paintings. The viewer
+                      is invited to linger in liminal space, while experiencing
+                      the hierarchy between spectator, space and screen slowly
+                      dissolving. Who is watching whom?
                     </div>
                     <div class="work-url">
                       <a
@@ -650,7 +652,7 @@ c36.56,0.01,72.92-4.03,109.48-3.82c28.62,0.17,57.2,2.97,84.66,8.29c13.97,2.71,27
                         >Instagram</a
                       >
                       <a href="https://www.felinehjermind.com" target="_blank"
-                        >Instagram</a
+                        >Website</a
                       >
                     </div>
                   </div>
