Verena Blok's update

--- a/index.html
+++ b/index.html
@@ -1120,17 +1120,22 @@ c36.56,0.01,72.92-4.03,109.48-3.82c28.62,0.17,57.2,2.97,84.66,8.29c13.97,2.71,27
                   <div class="work-description">
                     <div class="work-meta">Netherlands; duration: 0:07:26</div>
                     <div class="work-text">
-                      In “Out Lookers”, Verena Blok portrays older women who
-                      reclaim their space in public. Witnessing these women age
-                      while she herself was maturing into womanhood, the
+                      In “Out Lookers” (2022), Verena Blok portrays older women
+                      who reclaim their space in public. Witnessing these women
+                      age while she herself was maturing into womanhood, the
                       dominant Western discourse privileging youthful femininity
-                      rendered them slowly invisible. The film uses snippets of
-                      candid conversation between the artist and the women about
-                      the transitional nature of femininity. At times they speak
-                      through a book they love, Olga Tokarczuk's“DriveYour
-                      PlowOverTheBonesOfThe Dead” (2009), a bleakly comic
-                      mystery novel about a post-menopausal woman who raises
-                      fierce questions about human behavior.
+                      rendered them slowly invisible. The elderly women in this
+                      film, anonymous and unnoticeable, are made present by
+                      assuming dark shades of sunglasses that filter their gaze.
+                      As such, they become commentators on the meaning of
+                      womanhood through time. The film uses snippets of candid
+                      conversation between the artist and the women — the
+                      artist’s mother and mother’s friends — about the
+                      transitional nature of femininity. At times they speak
+                      through and around a book they love, Olga Tokarczuk's
+                      “Drive Your Plow Over the Bones of the Dead” (2009), a
+                      bleakly comic mystery novel about a post-menopausal woman
+                      who raises fierce questions about human behavior.
                     </div>
                     <div class="work-url">
                       <a
