--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </main>
         <footer>
           <time class="date"><strong>5 — 21 May 2023</strong></time>
-          <time class="hour"> Fri — Sun, 20.00–22.00</time>
+          <!-- <time class="hour"> Fri — Sun, 20.00–22.00</time> -->
           <address>
             <a href="https://goo.gl/maps/oHv7GgMDbgn5yCqT7" target="_blank"
               >Laak, Lulofsstraat 59, Den Haag</a
@@ -202,7 +202,7 @@ c36.56,0.01,72.92-4.03,109.48-3.82c28.62,0.17,57.2,2.97,84.66,8.29c13.97,2.71,27
           <div class="week-info">
             <div class="week-date">
               <time>5 – 7 May 2023: 20.00–22.00</time>
-              <time>5 may 2023 (opening): 20.00–22.00</time>
+              <time>5 may (Opening 1): 20.00–2.00</time>
             </div>
           </div>
           <div class="work-list">
@@ -561,7 +561,11 @@ c36.56,0.01,72.92-4.03,109.48-3.82c28.62,0.17,57.2,2.97,84.66,8.29c13.97,2.71,27
           <div class="week-info">
             <div class="week-date">
               <time>12 – 14 May 2023: 20.00–22.00</time>
-              <time>13 May (clubnight opening hours): 00.00–06.00</time>
+              <time>12 May (Opening 2): 20.00–2.00</time>
+              <time
+                >13 May (extended clubnight opening hours): 00.00–06:00</time
+              >
+              <time>14 May: 20.00–22.00</time>
             </div>
           </div>
           <div class="work-list">
@@ -934,6 +938,7 @@ c36.56,0.01,72.92-4.03,109.48-3.82c28.62,0.17,57.2,2.97,84.66,8.29c13.97,2.71,27
           <div class="week-info">
             <div class="week-date">
               <time>19 – 21 May 2023: 20.00–22.00</time>
+              <time>19 may (Opening 3): 20.00–2.00</time>
             </div>
           </div>
           <div class="work-list">
