--- a/index.html
+++ b/index.html
@@ -1001,15 +1001,9 @@ c36.56,0.01,72.92-4.03,109.48-3.82c28.62,0.17,57.2,2.97,84.66,8.29c13.97,2.71,27
                   <div class="work-description">
                     <div class="work-meta">Germany; duration: 0:25:26</div>
                     <div class="work-text">
-                      The video is an investigation into the archeology of
-                      obsolete special effects. It is set in an artificial world
-                      inspired by science fiction low budget movies, cult TV
-                      series, and Hollywood classics from the 70s and 80s. The
-                      consolidated visual metaphor of the cave is used in order
-                      to make the viewer transition between two realities. Once
-                      on the other side, we meet a fictional character, an old
-                      talking rock that lives in a cavern. The rock is musing on
-                      all the films seen and that have shaped its own memories.
+                      TVs move through the most diverse rooms, hide behind
+                      framed pictures, emerge from furniture, the ceiling or the
+                      floor and disappear again...
                     </div>
                     <div class="work-url">
                       <a
